# columbo

./: .gitignore  Cargo.toml  README.md
research/: block-splitting.md  deflopt-methods.md  defluff-methods.md  deft4j-methods.md  design-v1.md
research/binaries/defluff/defluff032/: defluff-0.3.2-darwin-x86
src/: bit.rs  block.rs  container.rs  error.rs  lib.rs  main.rs
src/huffman/: mod.rs
src/rle/: mod.rs
